app_list: use EnableFullscreenAppList for SearchResultTileItemView UI and layout

changes:
The general SearchResultTileItemView layout and UI should be controlled by
EnableFullscreenAppList flag. Those Play Store related views are enabled by
EnablePlayStoreAppSearch, like rating_, rating_star_, price_, badge_. By
checking if they are nullptr, that is equivalently checking
EnablePlayStoreAppSearch flag.

Bug: 741073
TEST: tested without EnablePlayStoreAppSearch flag, it behaves correctly now.
Change-Id: I6ae4313698e428760fec024c487590672bda40aa
Reviewed-on: https://chromium-review.googlesource.com/567488
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Qiang(Joe) Xu <warx@chromium.org>
Cr-Commit-Position: refs/heads/master@{#486436}
Former-commit-id: ec6c1b3f0dbfc303a1517e0513a411e3d1068bb7