ui/app_list/views/search_result_tile_item_view.h
@@ -75,8 +75,7 @@ class APP_LIST_EXPORT SearchResultTileItemView
 
   AppListViewDelegate* view_delegate_;
 
-  // Whether the Play Store app search feature is enabled.
-  const bool is_play_store_app_search_enabled_;
+  const bool is_fullscreen_app_list_enabled_;
 
   std::unique_ptr<views::MenuRunner> context_menu_runner_;
 
